--- a/.github/DISCUSSION_TEMPLATE/token-dapp-and-console-bugs.yml
+++ b/.github/DISCUSSION_TEMPLATE/token-dapp-and-console-bugs.yml
@@ -4,7 +4,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thank you for taking your time to file a bug report!
+        Thank you for taking the time to file a bug report!
 
   - type: textarea
     id: bug
@@ -34,7 +34,7 @@ body:
     id: reproduce
     attributes:
       label: Steps to reproduce
-      description: "Detail the steps to reproduce the behaviour"
+      description: "Detail the steps to reproduce the behaviour."
       value: |
         1. Go to '...'
         2. Click on '....'
@@ -50,7 +50,7 @@ body:
     id: has-id
     attributes:
       label: pub-key
-      description: Please add your vega pubkey to help investigations.
+      description: "Please add your Vega public key to help investigations."
     validations:
       required: false
 
